--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -133,5 +133,10 @@ nav {
 
     .menu{
         display: block;
+        padding-right: 25px;
+    }
+
+    .name{
+        padding-left: 25px;
     }
 }
