--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -4,17 +4,21 @@
         <div class="skills-container" *ngFor="let image of images; let i = index">
             <img class="skill-image" src="{{ image }}">
             <span class="title-skills">{{ title[i]}}</span>
+            
         </div>
     </div>
     <div class="right-content">
         <div class="flex">
+            
             <H1>My Skills</H1>
             <div class="line"></div>
         </div>
-        <span class="skills-container">I have grown my frontend developments skills that habe allowed me toc reate
+       
+        <span class="skills-container">I have grown my frontend developments skills that have allowed me toc reate
             different real
             projects.</span>
         <button class="btn">Get in touch</button>
     </div>
     <img class="decorate-img" src="assets/green_shadow.png" alt="">
+    
 </div>
