--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -67,7 +67,7 @@
                 <div class="information-data">
                     <input type="checkbox" id="myCheckbox" [(ngModel)]="contactData.checkbox" name="checkbox" required>
                     <label for="myCheckbox"></label>
-                    <span>I've read the <a href="">privacy policy</a> and agree to the processing of my data as
+                    <span>I've read the <a class="privacy-policy" href="">privacy policy</a> and agree to the processing of my data as
                         outlined.</span>
                     <div class="send-message-btn">
                         <button id="button" [disabled]="!contactForm.valid"
