--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -20,8 +20,8 @@
                 <img (click)="goToUrl('l')" src="assets/linkIn.png" alt="">
             </a>
         </div>
-
-
+      
+        <a class=" mobile-section" href="#">Impressum</a>
     </div>
 
 
