--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,7 +11,7 @@
   <div class="menu display-none">
     <a href="#" (click)="menuContent($event)">
         <img class="btn-img" src="assets/menu.png" alt="">
-        <img class="btn-img-hover" src="assets/menu-hover.png" alt="">
+        <img id="btn-hover" class="btn-img-hover" src="assets/menu-hover.png" alt="">
     </a>
 </div>
 <div id="mobile-content" class="menu-mobile display-none">
