--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -1,5 +1,4 @@
-
-.my-skills-section{
+.my-skills-section {
     background-color: #141D2F;
     color: white;
     padding-left: 80px;
@@ -8,10 +7,10 @@
     padding-bottom: 100px;
     padding-top: 150px;
     overflow: hidden;
-    
+
 }
 
-.decorate-img{
+.decorate-img {
     position: absolute;
     height: 500px;
     width: 500px;
@@ -19,33 +18,36 @@
     left: -200px;
 }
 
-h1{
+h1 {
     margin-top: 0;
     font-size: 88px;
 }
 
-.left-content{
+
+
+
+.left-content {
     width: 60%;
     display: flex;
     flex-wrap: wrap;
-   
+
     z-index: 10;
-   gap: 50px;
+    gap: 40px;
 }
 
-.right-content{
+.right-content {
     width: 40%;
 }
 
 
-.line{
-   margin-bottom: 35px;
+.line {
+    margin-bottom: 35px;
     background-color: #4441E5;
     height: 4px;
     width: 10%;
 }
 
-.btn{
+.btn {
     color: white;
     text-align: center;
     margin-left: 120px;
@@ -59,52 +61,85 @@ h1{
     background-color: #1CDAE6;
     cursor: pointer;
 
-    &:hover{
+    &:hover {
         background-color: #4441E5;
         scale: 1.1;
     }
 }
 
-.title-skills{
+.mobile-btn{
+    display: flex;
+    justify-content: center;
+}
+
+.btn-mobile {
+   
+    color: white;
+    text-align: center;
+   margin-top: 50px;
+    z-index: 10;
+    border: none;
+   
+    font-size: 30px;
+    border-radius: 10px;
+    padding: 12px;
+    background-color: #1CDAE6;
+    cursor: pointer;
+
+    &:hover {
+        background-color: #4441E5;
+        scale: 1.1;
+    }
+}
+
+.title-skills {
     text-align: center;
     padding-top: 14px;
     max-width: 80px;
 }
 
-.skills-container{
+.skills-container {
     text-align: center;
     font-size: 22px;
     display: flex;
     flex-direction: column;
     padding-bottom: 48px;
-    padding: 20px;
-   padding-right: 100px;
-    >img{
+    padding: 10px;
+    padding-right: 100px;
+
+    >img {
         cursor: pointer;
         height: 80px;
         width: 80px;
     }
-    .skill-image{
-       
-        &:hover{
-            animation: move 1s ease-in-out infinite; /* Verwenden Sie die move-Animation */
-              
-              @keyframes move {
+
+    .skill-image {
+
+        &:hover {
+            animation: move 1s ease-in-out infinite;
+            /* Verwenden Sie die move-Animation */
+
+            @keyframes move {
                 0% {
-                  transform: translateY(0); /* Anfangsposition */
+                    transform: translateY(0);
+                    /* Anfangsposition */
                 }
+
                 50% {
-                  transform: translateY(-15px); /* Zwischenposition (hin) */
+                    transform: translateY(-15px);
+                    /* Zwischenposition (hin) */
                 }
+
                 100% {
-                  transform: translateY(0); /* Endposition (zurück) */
+                    transform: translateY(0);
+                    /* Endposition (zurück) */
                 }
-              }
+            }
         }
     }
 }
 
-.flex{
+.flex {
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -112,32 +147,44 @@ h1{
 }
 
 @media screen and (max-width: 1250px) {
-    h1{
+    h1 {
         font-size: 80px;
     }
 }
 
-@media screen and (max-width: 1200px){
-    .my-skills-section{
+@media screen and (min-width:1200px){
+    .mobile-btn{
+        display: none;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .my-skills-section {
         flex-direction: column-reverse;
         justify-content: center;
     }
 
-    .right-content{
+    .hide-mobile{
+        display: block;
+    }
+
+
+    .right-content {
         width: 100%;
     }
 
-    .left-content{
+    .left-content {
         width: 100%;
         padding-top: 50px;
         gap: 40px;
+        justify-content: center;
     }
 
-    .btn{
+    .hide-desktop {
         display: none;
     }
 
-    .flex{
+    .flex {
         justify-content: end;
     }
 }
@@ -147,25 +194,28 @@ h1{
 
 
 @media screen and (max-width: 850px) {
-    .my-skills-section{
+    .my-skills-section {
         padding-left: 5px;
     }
 
-    .skills-container{
+    .skills-container {
         padding-right: 25px;
+        justify-content: center;
     }
 
-    
 
-    
+
+
 }
 
-@media screen and (max-width: 550px){
-    .skills-container{
-font-size: 18px;
-        >img{
-            width: 50px;
-            height: 50px;
-        }
+@media screen and (max-width: 550px) {
+    .skills-container {
+        font-size: 18px;
+
+
+    }
+
+    h1 {
+        font-size: 60px;
     }
 }
