--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -2,25 +2,18 @@
     <img class="background-shadow" src="assets/purple-shadow.png" alt="">
     <div class="left-section">
         <div>
-            <h1>About me</h1>
-            <span>Hello, I'm Artur Marbach, a frontend developer from Hamburg, Germany. Welcome to my homepage!
-                Passionate about creative solutions, I'm committed to continuous development in web development. With a
-                keen interest in technology and a drive to deepen my skills, I aim to craft innovative and user-friendly
-                websites.</span>
+            <h1>{{"About me" | translate}}</h1>
+            <span>{{"homepage.intro" | translate}}</span>
             <div>
                 <div class="">
                     <div class="info">
                         <img src="assets/light.png" alt="">
                         <div style="padding-left: 21px;"></div>
-                        <span>With a broad knowledge base and passion for web development, I offer a fresh perspective
-                            and strong willingness to learn. Determined to further develop my skills, I'm eager to
-                            collaborate on tailored solutions supporting your company goals</span>
+                        <span>{{"Enthusiasm" | translate}}</span>
                     </div>
                     <div class="info">
                         <img src="assets/puzzle.png" alt="">
-                        <span>As an aspiring web developer, I bring a unique perspective and unwavering commitment to
-                            quality. With a drive to learn new technologies and develop myself, I'm confident in making
-                            a valuable contribution to your digital projects.</span>
+                        <span>{{ "Commitment" |translate}}</span>
                     </div>
                 </div>
             </div>
