--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,6 +1,7 @@
 .contact-section {
     background-color: #141D2F;
     color: white !important;
+    padding-top: 80px;
 }
 
 .flex {
@@ -100,7 +101,7 @@ h2 {
 /* Entfernt margin und padding für alle Elemente */
 * {
     margin: 0;
-    padding: 0;
+   
     box-sizing: border-box;
 }
 
