--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,8 @@
 <footer>
     <div class="content">
         <div>
-            <h2>Ar<span class="colored-letter">t</span>ur</h2>
+            <a href=""><h2>Ar<span class="colored-letter">t</span>ur</h2></a>
+            
             <a class="inprint" href="#">Impressum</a>
         </div>
         <div class="flex">
@@ -12,15 +13,15 @@
         </div>
 
         <div class="link-section">
-            <a href="">
+            <a routerLink="">
                 <img (click)="goToUrl('g')" src="assets/github.png" alt=""></a>
-            <a  href="mailto:marbach.a@gmx.net">
+            <a routerLink="mailto:marbach.a@gmx.net">
                 <img src="assets/mail.png" alt=""></a>
-            <a href="">
+            <a routerLink="">
                 <img (click)="goToUrl('l')" src="assets/linkIn.png" alt="">
             </a>
         </div>
-      
+
         <a class=" mobile-section" href="#">Impressum</a>
     </div>
 
