--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
 
-<app-first-section></app-first-section>
-<app-about-me></app-about-me>
-<app-my-skills></app-my-skills>
-<app-portfolio></app-portfolio>
-<app-contact></app-contact>
-<app-footer></app-footer>
+<div class="container">
+
+  
+    <app-first-section></app-first-section>
+    <app-about-me></app-about-me>
+    <app-my-skills></app-my-skills>
+    <app-portfolio></app-portfolio>
+    <app-contact></app-contact>
+    <app-footer></app-footer>
+    <router-outlet></router-outlet>
+  </div>
