--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -10,6 +10,11 @@ nav {
     align-items: center;
     z-index: 999;
     opacity: 1;
+
+
+    >a{
+        text-decoration: none;
+    }
 }
 
 .close-img{
