--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -1,6 +1,9 @@
 <div id="skills" class="my-skills-section">
     <div class="mobile-btn">
-        <button class="btn-mobile hide-mobile">Get in touch</button>
+        <a href="#contact">
+            <button class="btn-mobile hide-mobile">{{ "Get in touch" |translate}}</button>
+
+        </a>
 
     </div>
     <div class="left-content">
@@ -15,14 +18,15 @@
     <div class="right-content">
         <div class="flex">
            
-            <H1>My Skills</H1>
+            <H1>{{"My Skills" | translate}}</H1>
             <div class="line"></div>
         </div>
        
-        <span class="skills-container">I have grown my frontend developments skills that have allowed me toc reate
-            different real
-            projects.</span>
-        <button class="btn hide-desktop">Get in touch</button>
+        <span class="skills-container">{{ "Skill Development" | translate}}</span>
+            <a href="#contact">
+                <button class="btn hide-desktop">{{ "Get in touch" |translate}}</button>
+
+            </a>
     </div>
    
     <img class="decorate-img" src="assets/green_shadow.png" alt="">
